--- a/client/src/about/aboutUs.css
+++ b/client/src/about/aboutUs.css
@@ -4,6 +4,8 @@
     text-align: center;
     max-width: 800px;
     margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
     background-color: rgba(0, 0, 0, 0.7); /* semi-transparent background */
     border-radius: 10px;
 }
