--- a/client/src/about/aboutUs.css
+++ b/client/src/about/aboutUs.css
@@ -6,7 +6,7 @@
     margin: 0 auto;
     margin-top: 10px;
     margin-bottom: 10px;
-    background-color: rgba(0, 0, 0, 0.7); /* semi-transparent background */
+    background-color: rgba(0, 0, 0, 0.7);
     border-radius: 10px;
 }
 
