--- a/client/src/login/login.css
+++ b/client/src/login/login.css
@@ -1,8 +1,8 @@
-.contact-us {
+.login-container {
     color: #fff;
     padding: 20px;
     text-align: center;
-    max-width: 800px;
+    max-width: 400px;
     margin: 0 auto;
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 10px;
@@ -10,12 +10,12 @@
     margin-bottom: 20px;
 }
 
-.contact-us h1 {
+.login-container h1 {
     font-size: 2.5em;
     margin-bottom: 20px;
 }
 
-.contact-us form {
+.login-container form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,7 +25,7 @@
 .form-group {
     margin-bottom: 15px;
     width: 100%;
-    max-width: 600px;
+    box-sizing: border-box; 
 }
 
 .form-group label {
@@ -35,18 +35,25 @@
     text-align: left;
 }
 
-.form-group input,
-.form-group textarea {
+.form-group input {
     width: 100%;
     padding: 10px;
     font-size: 1em;
     border-radius: 5px;
     border: 1px solid #ccc;
+    box-sizing: border-box;
 }
 
-.form-group textarea {
-    resize: vertical;
-    height: 150px;
+.checkbox-group {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.checkbox-group input {
+    width: auto;
+    margin-right: 10px;
 }
 
 button[type="submit"] {
