--- a/client/src/register/register.css
+++ b/client/src/register/register.css
@@ -7,6 +7,7 @@
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 10px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .register-container h1 {
