--- a/client/src/components/store/store.css
+++ b/client/src/components/store/store.css
@@ -8,10 +8,6 @@
     justify-content: center;
     margin-bottom: 20px;
 }
-.img-fluid {
-    width: 250px;
-    height: 300px;
-  }
 
 .catalog-filters button {
     background-color: rgba(28, 28, 28, 0.8);
@@ -31,10 +27,10 @@
 }
 
 .catalog-items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 350px);
     gap: 20px;
+    justify-content: center;
 }
 
 .catalog-item {
@@ -42,14 +38,16 @@
     padding: 10px;
     border-radius: 10px;
     text-align: center;
-    width: 200px;
     transition: transform 0.3s;
     position: relative;
     overflow: hidden;
+    width: 100%;
+    max-width: 250px;
 }
 
 .catalog-item img {
     width: 100%;
+    height: 300px;
     border-radius: 10px;
 }
 
