--- a/client/src/components/details/catalog-details/CatalogMangaDetails.css
+++ b/client/src/components/details/catalog-details/CatalogMangaDetails.css
@@ -73,6 +73,9 @@
 
 .comment-item {
     margin-bottom: 10px;
+    border-radius: 10px;
+    background-color: rgba(160, 54, 91, 0.3);
+    margin-top: 20px;
 }
 
 .new-comment-input {
