--- a/client/src/components/store/store.css
+++ b/client/src/components/store/store.css
@@ -33,6 +33,24 @@
     justify-content: center;
 }
 
+.catalog-item-no-manga{
+    display: flex;
+    margin: auto;
+     width: 50%;
+    gap: 20px;
+    justify-content: center;
+    background-color: rgba(28, 28, 28, 0.8);
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    transition: transform 0.3s;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    max-width: 250px;
+    color: white;
+}
+
 .catalog-item {
     background-color: rgba(28, 28, 28, 0.8);
     padding: 10px;
