--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -9,6 +9,11 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
+.error {
+    color: red;
+    font-size: 1.2em;
+    margin-top: 0.25em;
+}
 
 .login-container h1 {
     font-size: 2.5em;
