--- a/client/src/components/create-item/createItem.css
+++ b/client/src/components/create-item/createItem.css
@@ -8,6 +8,13 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.error {
+    color: red;
+    font-size: 1.2em;
+    margin-top: 0.25em;
+    
+}
+
 h1 {
     text-align: center;
     margin-bottom: 20px;
@@ -18,6 +25,12 @@ form {
     display: flex;
     flex-direction: column;
 }
+
+form p {
+    text-align: center;
+}
+
+
 
 label {
     margin-bottom: 5px;
