--- a/client/src/components/details/store-details/edit/editMangaPage.css
+++ b/client/src/components/details/store-details/edit/editMangaPage.css
@@ -27,6 +27,15 @@
     display: block;
     margin-bottom: 5px;
 }
+select {
+    margin-bottom: 20px;
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1em;
+}
+
 
 .edit-input,
 .edit-textarea {
