--- a/client/src/components/details/catalog-details/CatalogMangaDetails.css
+++ b/client/src/components/details/catalog-details/CatalogMangaDetails.css
@@ -2,6 +2,12 @@
     padding: 20px;
 }
 
+.error {
+    color: red;
+    font-size: 1.2em;
+    margin-top: 0.25em;
+}
+
 .manga-details {
     display: flex;
     justify-content: space-between;
