--- a/client/src/components/contact-us/contactUs.css
+++ b/client/src/components/contact-us/contactUs.css
@@ -10,6 +10,13 @@
     margin-bottom: 20px;
 }
 
+
+.error {
+    color: red;
+    font-size: 1.2em;
+    margin-top: 0.25em;
+}
+
 .contact-us h1 {
     font-size: 2.5em;
     margin-bottom: 20px;
